--- a/Bac/Maths/lesson10.html
+++ b/Bac/Maths/lesson10.html
@@ -56,26 +56,23 @@
                 <table border="1" style="width:80%; margin:auto; text-align:center;">
                     <tr>
                         <th>$x$</th>
-                        <td>$0$</td>
-                        <td>$\pi/6$</td>
-                        <td>$\pi/4$</td>
-                        <td>$\pi/3$</td>
-                        <td>$\pi/2$</td>
+                        <td>$0$</td>                        <td>$\frac{\pi}{6}$</td>
+                        <td>$\frac{\pi}{4}$</td>
+                        <td>$\frac{\pi}{3}$</td>
+                        <td>$\frac{\pi}{2}$</td>
                     </tr>
                     <tr>
                         <th>$\cos(x)$</th>
-                        <td>$1$</td>
-                        <td>$\sqrt{3}/2$</td>
-                        <td>$\sqrt{2}/2$</td>
-                        <td>$1/2$</td>
+                        <td>$1$</td>                        <td>$\frac{\sqrt{3}}{2}$</td>
+                        <td>$\frac{\sqrt{2}}{2}$</td>
+                        <td>$\frac{1}{2}$</td>
                         <td>$0$</td>
                     </tr>
                     <tr>
                         <th>$\sin(x)$</th>
-                        <td>$0$</td>
-                        <td>$1/2$</td>
-                        <td>$\sqrt{2}/2$</td>
-                        <td>$\sqrt{3}/2$</td>
+                        <td>$0$</td>                        <td>$\frac{1}{2}$</td>
+                        <td>$\frac{\sqrt{2}}{2}$</td>
+                        <td>$\frac{\sqrt{3}}{2}$</td>
                         <td>$1$</td>
                     </tr>
                 </table>
@@ -97,25 +94,22 @@
             </div>
             <div class="theorem-box">
                 <h3 class="box-title">Formules de dérivation</h3>
-                <p>Les fonctions $\sin$ et $\cos$ sont dérivables sur $\mathbb{R}$ et :</p>
-                <ul>
-                    <li>$(\sin(x))\" = \cos(x)$</li>
-                    <li>$(\cos(x))\" = -\sin(x)$</li>
+                <p>Les fonctions $\sin$ et $\cos$ sont dérivables sur $\mathbb{R}$ et :</p>                <ul>
+                    <li>$(\sin(x))' = \cos(x)$</li>
+                    <li>$(\cos(x))' = -\sin(x)$</li>
                 </ul>
             </div>
             <div class="property-box">
                 <h3 class="box-title">Dérivées de fonctions composées (Rappel)</h3>
-                <p>Si $u$ est une fonction dérivable :</p>
-                <ul>
-                    <li>$(\sin(u))\" = u\" \cos(u)$</li>
-                    <li>$(\cos(u))\" = -u\" \sin(u)$</li>
+                <p>Si $u$ est une fonction dérivable :</p>                <ul>
+                    <li>$(\sin(u))' = u' \cos(u)$</li>
+                    <li>$(\cos(u))' = -u' \sin(u)$</li>
                 </ul>
             </div>
             <div class="example-box">
-                <h3 class="box-title">Exemple</h3>
-                <p>Soit $f(x) = \sin(3x + \pi/4)$.</p>
-                <p>C'est de la forme $\sin(u)$ avec $u(x) = 3x + \pi/4$. On a $u\"(x) = 3$.</p>
-                <p>$f\"(x) = u\" \cos(u) = 3 \cos(3x + \pi/4)$.</p>
+                <h3 class="box-title">Exemple</h3>                <p>Soit $f(x) = \sin(3x + \frac{\pi}{4})$.</p>
+                <p>C'est de la forme $\sin(u)$ avec $u(x) = 3x + \frac{\pi}{4}$. On a $u'(x) = 3$.</p>
+                <p>$f'(x) = u' \cos(u) = 3 \cos(3x + \frac{\pi}{4})$.</p>
             </div>
         </section>
 
@@ -126,7 +120,7 @@
             <div class="summary-box">
                 <h3 class="box-title">Étude de la fonction cosinus sur $[0, \pi]$</h3>
                 <ul>
-                    <li>Dérivée : $(\cos x)\" = -\sin x$.</li>
+                    <li>Dérivée : $(\cos x)' = -\sin x$.</li>
                     <li>Signe de la dérivée : Sur $[0, \pi]$, $\sin x \ge 0$. Donc $-\sin x \le 0$.</li>
                     <li>Variations : La fonction cosinus est décroissante sur $[0, \pi]$.</li>
                     <li>Tableau de variations :
@@ -139,7 +133,7 @@
                                 <td>$\pi$</td>
                             </tr>
                             <tr>
-                                <th>Signe de $(\cos x)\"$</th>
+                                <th>Signe de $(\cos x)'$</th>
                                 <td></td>
                                 <td>$-$</td>
                                 <td></td>
@@ -158,9 +152,8 @@
             <div class="summary-box">
                 <h3 class="box-title">Étude de la fonction sinus sur $[0, \pi]$</h3>
                  <ul>
-                    <li>Dérivée : $(\sin x)\" = \cos x$.</li>
-                    <li>Signe de la dérivée : Sur $[0, \pi]$, $\cos x$ est positif sur $[0, \pi/2]$ et négatif sur $[\pi/2, \pi]$.</li>
-                    <li>Variations : La fonction sinus est croissante sur $[0, \pi/2]$ et décroissante sur $[\pi/2, \pi]$.</li>
+                    <li>Dérivée : $(\sin x)' = \cos x$.</li>                    <li>Signe de la dérivée : Sur $[0, \pi]$, $\cos x$ est positif sur $[0, \frac{\pi}{2}]$ et négatif sur $[\frac{\pi}{2}, \pi]$.</li>
+                    <li>Variations : La fonction sinus est croissante sur $[0, \frac{\pi}{2}]$ et décroissante sur $[\frac{\pi}{2}, \pi]$.</li>
                     <li>Tableau de variations :
                          <div style="overflow-x:auto;">
                         <table border="1" style="width:80%; margin:auto; text-align:center;">
@@ -168,12 +161,12 @@
                                 <th>$x$</th>
                                 <td>$0$</td>
                                 <td></td>
-                                <td>$\pi/2$</td>
+                                <td>$\frac{\pi}{2}$</td>
                                 <td></td>
                                 <td>$\pi$</td>
                             </tr>
                             <tr>
-                                <th>Signe de $(\sin x)\"$</th>
+                                <th>Signe de $(\sin x)'$</th>
                                 <td></td>
                                 <td>$+$</td>
                                 <td>$0$</td>
@@ -196,7 +189,7 @@
             <div class="summary-box">
                 <h3 class="box-title">Courbes représentatives (Sinusoïdes)</h3>
                 <p>Les courbes représentatives des fonctions sinus et cosinus sont appelées des sinusoïdes. Elles sont obtenues en répétant le motif sur $[0, 2\pi]$ (ou $[-\pi, \pi]$) par translation de vecteur $2k\pi \vec{i}$.</p>
-                <p>La courbe de $\sin x$ s'obtient en translatant la courbe de $\cos x$ de $-\pi/2$ selon l'axe des abscisses (car $\sin(x) = \cos(x - \pi/2)$).</p>
+                <p>La courbe de $\sin x$ s'obtient en translatant la courbe de $\cos x$ de $-\frac{\pi}{2}$ selon l'axe des abscisses (car $\sin(x) = \cos(x - \frac{\pi}{2})$).</p>
                 <!-- Images illustratives des courbes peuvent être ajoutées ici -->
             </div>
         </section>
@@ -219,17 +212,15 @@
                 </ul>
             </div>
             <div class="example-box">
-                <h3 class="box-title">Exemple</h3>
-                <p>Résoudre dans $\mathbb{R}$ l'équation $\cos(x) = 1/2$.</p>
-                <p>On sait que $\cos(\pi/3) = 1/2$. L'équation est donc $\cos(x) = \cos(\pi/3)$.</p>
-                <p>Les solutions sont $x = \pi/3 + 2k\pi$ ou $x = -\pi/3 + 2k\pi$, avec $k \in \mathbb{Z}$.</p>
-                <p>Si on cherche les solutions dans $[0, 2\pi]$ :</p>
-                <ul>
-                    <li>Pour $k=0$, on a $x = \pi/3$ et $x = -\pi/3$. Seul $\pi/3$ est dans l'intervalle.</li>
-                    <li>Pour $k=1$, on a $x = \pi/3 + 2\pi$ (trop grand) et $x = -\pi/3 + 2\pi = 5\pi/3$. $5\pi/3$ est dans l'intervalle.</li>
-                    <li>Pour $k=-1$, on a $x = \pi/3 - 2\pi$ (trop petit) et $x = -\pi/3 - 2\pi$ (trop petit).</li>
+                <h3 class="box-title">Exemple</h3>                <p>Résoudre dans $\mathbb{R}$ l'équation $\cos(x) = \frac{1}{2}$.</p>
+                <p>On sait que $\cos(\frac{\pi}{3}) = \frac{1}{2}$. L'équation est donc $\cos(x) = \cos(\frac{\pi}{3})$.</p>
+                <p>Les solutions sont $x = \frac{\pi}{3} + 2k\pi$ ou $x = -\frac{\pi}{3} + 2k\pi$, avec $k \in \mathbb{Z}$.</p>
+                <p>Si on cherche les solutions dans $[0, 2\pi]$ :</p>                <ul>
+                    <li>Pour $k=0$, on a $x = \frac{\pi}{3}$ et $x = -\frac{\pi}{3}$. Seul $\frac{\pi}{3}$ est dans l'intervalle.</li>
+                    <li>Pour $k=1$, on a $x = \frac{\pi}{3} + 2\pi$ (trop grand) et $x = -\frac{\pi}{3} + 2\pi = \frac{5\pi}{3}$. $\frac{5\pi}{3}$ est dans l'intervalle.</li>
+                    <li>Pour $k=-1$, on a $x = \frac{\pi}{3} - 2\pi$ (trop petit) et $x = -\frac{\pi}{3} - 2\pi$ (trop petit).</li>
                 </ul>
-                <p>Les solutions dans $[0, 2\pi]$ sont $\pi/3$ et $5\pi/3$.</p>
+                <p>Les solutions dans $[0, 2\pi]$ sont $\frac{\pi}{3}$ et $\frac{5\pi}{3}$.</p>
             </div>
         </section>
 
