--- a/Bac/Maths/lesson8.html
+++ b/Bac/Maths/lesson8.html
@@ -55,7 +55,7 @@
                     <li>La somme $f+g$ est continue sur $I$.</li>
                     <li>Le produit $\lambda f$ est continu sur $I$.</li>
                     <li>Le produit $f \times g$ est continu sur $I$.</li>
-                    <li>Si $g$ ne s'annule pas sur $I$, le quotient $f/g$ est continu sur $I$.</li>
+                    <li>Si $g$ ne s'annule pas sur $I$, le quotient $\frac{f}{g}$ est continu sur $I$.</li>
                     <li>La composée $g \circ f$ est continue sur $I$ (si les conditions de composition sont remplies et $g$ est continue sur l'intervalle image $f(I)$).</li>
                 </ul>
                 <p>Ces propriétés découlent directement des opérations sur les limites.</p>
