--- a/Bac/Maths/lesson14.html
+++ b/Bac/Maths/lesson14.html
@@ -66,11 +66,11 @@
                 <p>Calculer $P_R(C)$ : la probabilité de tirer un cœur sachant qu'on a tiré un roi.</p>
                 <p>Univers $\Omega$ : 32 cartes.</p>                <p>$P(R) = \frac{4}{32} = \frac{1}{8}$ <span class="tex2jax_ignore">(il y a 4 rois)</span>.</p>
                 <p>$R \cap C$ est l'événement "Tirer le roi de cœur". $P(R \cap C) = \frac{1}{32}$.</p>
-                <p>$P_R(C) = \frac{P(R \cap C)}{P(R)} = \frac{1/32}{4/32} = \frac{1}{4}$.</p>
+                <p>$P_R(C) = \frac{P(R \cap C)}{P(R)} = \frac{\frac{1}{32}}{\frac{4}{32}} = \frac{1}{4}$.</p>
                 <p>Interprétation : Parmi les 4 rois possibles, un seul est un cœur.</p>
                 <p>Calculer $P_C(R)$ : la probabilité de tirer un roi sachant qu'on a tiré un cœur.</p>
                 <p>$P(C) = \frac{8}{32} = \frac{1}{4}$ <span class="tex2jax_ignore">(il y a 8 cœurs)</span>.</p>
-                <p>$P_C(R) = \frac{P(C \cap R)}{P(C)} = \frac{1/32}{8/32} = \frac{1}{8}$.</p>
+                <p>$P_C(R) = \frac{P(C \cap R)}{P(C)} = \frac{\frac{1}{32}}{\frac{8}{32}} = \frac{1}{8}$.</p>
                 <p>Interprétation : Parmi les 8 cœurs possibles, un seul est un roi.</p>
             </div>
         </section>
@@ -195,14 +195,12 @@
         <div class="page-break"></div>
             <div class="example-box">
                 <h3 class="box-title">Exemple</h3>
-                <p>On lance deux fois un dé équilibré à 6 faces.</p>
-                <p>Soit $A$ l'événement "Le premier lancer donne 6". $P(A) = 1/6$.</p>
-                <p>Soit $B$ l'événement "Le deuxième lancer donne 6". $P(B) = 1/6$.</p>
-                <p>Soit $C$ l'événement "La somme des deux lancers est 12". $C$ correspond à l'issue (6, 6). $P(C) = 1/36$.</p>
+                <p>On lance deux fois un dé équilibré à 6 faces.</p>                <p>Soit $A$ l'événement "Le premier lancer donne 6". $P(A) = \frac{1}{6}$.</p>
+                <p>Soit $B$ l'événement "Le deuxième lancer donne 6". $P(B) = \frac{1}{6}$.</p>
+                <p>Soit $C$ l'événement "La somme des deux lancers est 12". $C$ correspond à l'issue (6, 6). $P(C) = \frac{1}{36}$.</p>
                 <p>Les événements $A$ et $B$ sont-ils indépendants ?</p>
-                <p>$A \cap B$ est l'événement "Le premier lancer donne 6 ET le deuxième lancer donne 6", c'est l'événement $C$.</p>
-                <p>$P(A \cap B) = P(C) = 1/36$.</p>
-                <p>$P(A) \times P(B) = (1/6) \times (1/6) = 1/36$.</p>
+                <p>$A \cap B$ est l'événement "Le premier lancer donne 6 ET le deuxième lancer donne 6", c'est l'événement $C$.</p>                <p>$P(A \cap B) = P(C) = \frac{1}{36}$.</p>
+                <p>$P(A) \times P(B) = \frac{1}{6} \times \frac{1}{6} = \frac{1}{36}$.</p>
                 <p>Comme $P(A \cap B) = P(A) \times P(B)$, les événements $A$ et $B$ sont indépendants (ce qui est intuitif pour des lancers successifs).</p>
             </div>
             <div class="remark-box">
