--- a/Bac/Maths/lesson15.html
+++ b/Bac/Maths/lesson15.html
@@ -84,7 +84,7 @@
                     </tr>
                 </table>
                 </div>
-                <p>On vérifie que $\sum p_i = 6 \times (1/6) = 1$.</p>
+                <p>On vérifie que $\sum p_i = 6 \times \frac{1}{6} = 1$.</p>
             </div>
         </section>
 
