--- a/Bac/index.html
+++ b/Bac/index.html
@@ -24,7 +24,7 @@
         <h2 class="button-title">NSI</h2>
         <p class="button-description">Programmation et algorithmique NSI</p>
       </a>
-        <a href="/Philosophie/" class="subject-button philosophie">
+        <a href="Philosophie/index.html" class="subject-button philosophie">
         <div class="button-icon">
           <i class="fas fa-brain"></i>
         </div>
