--- a/Bac/Oral/subject1.html
+++ b/Bac/Oral/subject1.html
@@ -1,6 +1,6 @@
 <div class="section math-section">  <h2 class="section-title section-title-large">Sujet : Les opérations mathématiques qui façonnent la 3D informatique</h2>
   <div class="highlight-box">
-    <strong>Problématique : « Comment les opérations matricielles et les transformations géométriques permettent-elles de manipuler, animer et projeter des objets tridimensionnels dans l'univers numérique ? »</strong>
+    <strong>Problématique : « Comment les opérations matricielles donnent-elles vie à la 3D en informatique ?»</strong>
   </div>
 
   <h3>1. Mes motivations</h3>
