--- a/Bac/Oral/subject2.html
+++ b/Bac/Oral/subject2.html
@@ -1,7 +1,7 @@
 <div class="section ihm-section">
   <h2 class="section-title section-title-large">Sujet : L'histoire des interfaces homme-machine (IHM)</h2>
   <div class="highlight-box">
-    <strong>Problématique : « Comment l'évolution des interfaces homme-machine a-t-elle transformé notre rapport à l'informatique et à la société ? »</strong>
+    <strong>Problématique : « Comment les interfaces hommes-machines (IHM) ont-elles révolutionné l'informatique et la société»</strong>
   </div>
   <h3>1. Introduction et motivations</h3>
   <p>
