--- a/ScreenSaver/index.html
+++ b/ScreenSaver/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Screensaver</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <title>Screensaver</title>  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="icon" href="images/favicon.png" type="image/png">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -27,9 +28,9 @@
     <i class="fas fa-desktop"></i>
   </a>
   <a href="https://soundcloud.com/" id="music-btn">
-    <i class="fas fa-music"></i>
-  </a>
+    <i class="fas fa-music"></i>  </a>
   <div id="metadata" class="metadata"></div>
+  <div class="swipe-indicators" id="swipeIndicators"></div>
   <script src="script.js"></script>
 </body>
 </html>
