--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="#" class="link" id="everything">Tout</a>
         <a href="#" class="link" id="personal-project">Projets personnels</a>
         <a href="#" class="link" id="commissions">Commissions</a>
-        <a href="#" class="link" id="art-link">Art 3D</a>
+        <a href="#" class="link" id="art-link">Art</a>
         <a href="#" class="link" id="info-link">Infos</a>
         <a href="#" class="link" style="pointer-events: none;">|</a>
         <a href="Elements/image/CV.pdf" target="_blank" class="download">CV<span class="material-symbols-outlined" style="font-size: 3.5vh;">download</span></a>
@@ -104,7 +104,7 @@
 
 <!-- 3D Art Gallery -->
 <div id="art-gallery" style="display:none;">
-    <h1>Mes Créations 3D</h1>
+    <h1>Mes Créations Artistiques</h1>
     <div class="art-gallery-container">
         <!-- Art items will be loaded dynamically -->
     </div>
