--- a/index.html
+++ b/index.html
@@ -124,11 +124,7 @@
 
 </div>
 
-<div class="Ig-link">
-    <a href="https://www.instagram.com/leotosku/" target="_blank" rel="noopener noreferrer">
-        <i class="fab fa-instagram"></i> Instagram
-    </a>
-</div>
+<!-- Instagram link removed -->
 
 <div class="landing-page">
     <img id="landing-logo" src="Elements/image/logo.svg" alt="Logo">
