--- a/Bac/Philosophie/notion11.html
+++ b/Bac/Philosophie/notion11.html
@@ -79,18 +79,7 @@
     <div class="example">
         <div class="example-title">Émile Benveniste</div>
         <p><em>"C'est dans et par le langage que l'homme se constitue comme sujet."</em></p>
-        <p><strong>Contexte :</strong> Problèmes de linguistique générale - le langage comme condition de la subjectivité.</p>
-    </div>
+        <p><strong>Contexte :</strong> Problèmes de linguistique générale - le langage comme condition de la subjectivité.</p>    </div>
 </div>
-</body>
-</html>
-            <p><strong>Analyse :</strong> Le mythe répond à un besoin de sens et d'explication.</p>
-        </div>
-        <div class="example">
-            <div class="example-title">Exemple 2 : La laïcité</div>
-            <p>La séparation de la religion et de l'État garantit la liberté de conscience.</p>
-            <p><strong>Analyse :</strong> La laïcité permet la coexistence de différentes croyances dans une même société.</p>
-        </div>
-    </div>
 </body>
 </html>
