--- a/Bac/Philosophie/notion1.html
+++ b/Bac/Philosophie/notion1.html
@@ -3,88 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Philosophie - Notion 1</title>
+    <title>Philosophie - La conscience</title>
     <link rel="stylesheet" href="../common.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<!-- Notion 1 : La conscience -->
 <div class="course-section">
     <h4><i class="fas fa-graduation-cap"></i> Cours</h4>
-    <h5>Définitions fondamentales</h5>
-    <p><strong>La conscience</strong> : connaissance immédiate de soi, de ses pensées, de ses actes. Elle unit perception et réflexion, fonde l'identité personnelle et la responsabilité.</p>
+    <h5>Définitions</h5>
     <ul>
-        <li><b>Conscience réflexive :</b> retour sur ses propres pensées.</li>
-        <li><b>Conscience morale :</b> faculté de distinguer le bien du mal.</li>
-        <li><b>Inconscient :</b> processus psychiques qui échappent à la conscience mais influencent le comportement.</li>
-        <li><b>Intentionnalité :</b> la conscience vise toujours un objet.</li>
+        <li><b>Conscience :</b> Connaissance immédiate de soi, pensées, actes</li>
+        <li><b>Conscience réflexive :</b> Retour sur ses propres pensées</li>
+        <li><b>Intentionnalité :</b> Conscience vise toujours un objet</li>
     </ul>
-    <ul>
-        <li><b>Problème :</b> La conscience est-elle transparente à elle-même ?</li>
-        <li><b>Problème :</b> Peut-on connaître entièrement sa propre conscience ?</li>
-    </ul>
-</div>
 
-<div class="page-break"></div>
-
-<div class="course-section">
-    <h5>Les grandes théories</h5>
-    <p><strong>Descartes :</strong> "Je pense, donc je suis" : la conscience de soi est la première certitude, fondement du sujet.</p>
-    <p><strong>Kant :</strong> La conscience unifie l'expérience : "Le Je pense doit pouvoir accompagner toutes mes représentations." </p>
-    <p><strong>Freud :</strong> L'inconscient détermine largement nos pensées et nos actes : la conscience n'est que la partie émergée de l'iceberg psychique.</p>
-    <ul>
-        <li><b>Enjeu :</b> Comment articuler conscience et inconscient ?</li>
-    </ul>
+    <h5>Théories</h5>
+    <p><strong>Descartes :</strong> "Je pense, donc je suis." Conscience = certitude absolue.</p>
+    <p><strong>Kant :</strong> "Je pense doit accompagner toutes mes représentations."</p>
+    <p><strong>Freud :</strong> "Le moi n'est pas maître en sa maison." Inconscient limite conscience.</p>
 </div>
 
 <div class="page-break"></div>
 
 <div class="examples-section">
-    <h4><i class="fas fa-lightbulb"></i> Exemples et analyses</h4>
+    <h4><i class="fas fa-lightbulb"></i> Exemples</h4>
     <div class="example">
-        <div class="example-title">Exemple 1 : Le cogito cartésien</div>
-        <p>Descartes doute de tout, mais découvre qu'il ne peut douter qu'il doute, donc qu'il pense, donc qu'il existe comme conscience.</p>
-        <p><strong>Analyse :</strong> La conscience de soi est la seule certitude absolue, fondement de toute connaissance vraie.</p>
+        <div class="example-title">Cogito cartésien</div>
+        <p>Seule certitude résistant au doute.</p>
     </div>
     <div class="example">
-        <div class="example-title">Exemple 2 : Les actes manqués (Freud)</div>
-        <p>Un lapsus révèle un désir inconscient. L'inconscient s'exprime malgré nous dans nos paroles.</p>
-        <p><strong>Analyse :</strong> Montre les limites de la conscience : elle n'est pas maîtresse de tous nos actes psychiques.</p>
+        <div class="example-title">Actes manqués</div>
+        <p>Inconscient s'exprime malgré nous.</p>
     </div>
-</div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
-    <h4><i class="fas fa-question-circle"></i> Problématiques essentielles</h4>
+    <h4><i class="fas fa-question-circle"></i> Problèmes</h4>
     <div class="example">
-        <div class="example-title">Problème 1 : Transparence et opacité</div>
-        <p>La conscience se connaît-elle entièrement elle-même ? Peut-elle accéder à tous ses contenus ou reste-t-elle en partie mystérieuse ?</p>
+        <div class="example-title">Transparence/opacité</div>
+        <p>Conscience se connaît-elle entièrement ?</p>
     </div>
-    <div class="example">
-        <div class="example-title">Problème 2 : Liberté et déterminisme</div>
-        <p>La conscience nous rend-elle libres ou sommes-nous déterminés par des forces inconscientes ?</p>
-    </div>
-</div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
-    <h4><i class="fa fa-quote-left"></i> Citations clés à retenir</h4>
+    <h4><i class="fa fa-quote-left"></i> Citations</h4>
     <div class="example">
         <div class="example-title">Descartes</div>
         <p><em>"Je pense, donc je suis."</em></p>
-        <p><strong>Contexte :</strong> Discours de la méthode (1637).</p>
-    </div>
-    <div class="example">
-        <div class="example-title">Kant</div>
-        <p><em>"Le Je pense doit pouvoir accompagner toutes mes représentations."</em></p>
-        <p><strong>Contexte :</strong> Critique de la raison pure (1781).</p>
     </div>
     <div class="example">
         <div class="example-title">Freud</div>
         <p><em>"Le moi n'est pas maître dans sa propre maison."</em></p>
-        <p><strong>Contexte :</strong> Introduction à la psychanalyse (1916).</p>
     </div>
 </div>
 </body>
