--- a/Bac/Philosophie/notion9.html
+++ b/Bac/Philosophie/notion9.html
@@ -1,4 +1,5 @@
-<!-- Notion 9 : La nature -->
+<!DOCTYPE html>
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
